# frame-bridge

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
scripts/: show_structure.py
src/frame_bridge/: __init__.py  batch_processor.py  config.py  video_processor.py
tests/: batch_test.py  test_sample.py
